--- a/miniprogram/pages/add-inter/index.wxss
+++ b/miniprogram/pages/add-inter/index.wxss
@@ -1,7 +1,4 @@
 /**index.wxss**/
-
-page {
-  padding-top: 54rpx;
-  background-color: #f6f6f6;
-  padding-bottom: 60rpx;
+.container {
+  background-color: #fff;
 }
