--- a/miniprogram/common.wxss
+++ b/miniprogram/common.wxss
@@ -1,32 +1,60 @@
 .input-wrapper {
   height: 100rpx;
   width: 100%;
-  padding-right: 24rpx;
-  padding-left: 24rpx;
+  padding-right: 36rpx;
+  padding-left: 36rpx;
   box-sizing: border-box;
   font-size: 28rpx;
 }
 
 .input-inner-wrapper {
-  border-bottom: 2rpx solid #b1b1b1;
+  border-bottom: 2rpx solid #eeeeee;
   width: 100%;
   height: 100%;
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 
 .input-label {
   font-size: 28rpx;
-  color: #666;
+  color: #333;
   white-space: nowrap;
 }
 
 .input-field {
   box-sizing: border-box;
   font-size: 28rpx;
-  flex-grow: 1;
+  text-align: right;
+}
+
+.textarea-wrapper {
+  width: 100%;
+  padding-right: 36rpx;
+  padding-left: 36rpx;
+  box-sizing: border-box;
+  font-size: 28rpx;
+}
+
+.textarea-inner-wrapper {
+  border-bottom: 2rpx solid #eeeeee;
+  width: 100%;
+  height: 100%;
+  padding-top: 36rpx;
+}
+
+.textarea-label {
+  font-size: 28rpx;
+  color: #333;
+  white-space: nowrap;
+  margin-bottom: 24rpx;
+}
+
+.textarea-field {
+  min-height: 150rpx;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .container {
