--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -23,7 +23,7 @@ button::after{
 
 
 page {
-  background: #fff;
+  background: #f7f7f7;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
