--- a/miniprogram/atom.wxss
+++ b/miniprogram/atom.wxss
@@ -2,6 +2,14 @@
   margin-bottom: 16rpx;
 }
 
-.mg-t-32{
+.mg-b-12 {
+  margin-bottom: 24rpx;
+}
+
+.mg-b-38 {
+  margin-bottom: 76rpx;
+}
+
+.mg-t-32 {
   margin-top: 64rpx;
 }
