--- a/miniprogram/pages/inter-detail/index.wxml
+++ b/miniprogram/pages/inter-detail/index.wxml
@@ -65,7 +65,7 @@
     <view class="content-noraml">{{interInfo.jobDesc || '暂未添加职位信息'}}</view>
   </view>
   <view class="content-wrapper">
-    <view class="main-title mg-b-12">备注信息</view>
+    <view class="main-title mg-b-12">备注</view>
     <view class="content-noraml">{{interInfo.remark || '暂未添加备注信息'}}</view>
   </view>
 </view>
