--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,7 @@
 <!--index.wxml-->
 <view class="container">
+  <top-nav-bar />
+
   <inter-list-card status-title="进行中..." list="{{underwayInter}}" />
   <inter-list-card status-title="即将开始..." list="{{comingInter}}" />
   <inter-list-card status-title="已结束..." list="{{finishInter}}" />
