--- a/miniprogram/components/top-nav-bar/index.wxss
+++ b/miniprogram/components/top-nav-bar/index.wxss
@@ -4,19 +4,33 @@
   width: 100vw;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   height: 88rpx;
-  padding-left: 32rpx;
-  padding-right: 32rpx;
-  box-sizing: border-box;
 }
 
-.back-btn {
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
+.top-nav-bar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: #f9f8fd;
+}
+
+.nav-font {
   font-size: 32rpx;
   color: #313561;
   letter-spacing: 2rpx;
+}
+
+.back-btn {
+  margin-top: 44rpx;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  left: 32rpx;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .back-icon {
