--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view class="container">
-  <top-nav-bar />
+  <top-nav-bar title="首页"/>
 
   <inter-list-card status-title="进行中..." list="{{underwayInter}}" />
   <inter-list-card status-title="即将开始..." list="{{comingInter}}" />
