fix: 修改详情页操作按钮显示动画 && 调整按钮位置及大小

--- a/miniprogram/pages/inter-detail/index.wxss
+++ b/miniprogram/pages/inter-detail/index.wxss
@@ -57,49 +57,52 @@
 }
 
 .bottom-btn {
-  width: 80rpx;
-  height: 80rpx;
+  width: 88rpx;
+  height: 88rpx;
   border-radius: 50%;
   position: fixed;
   left: 50%;
-  opacity: 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .btn-1 {
-  bottom: 64rpx;
-  -webkit-animation: flyIn-1 .35s forwards;
-  animation: flyIn-1 .35s forwards;
-  animation-delay: .5s;
+  bottom: -100rpx;
+  left: calc(50% - 206rpx);
+  -webkit-animation: fly-up .35s forwards;
+  animation: fly-up .35s forwards;
+  animation-delay: .3s;
   background: rgba(51, 53, 125, 0.75);
   box-shadow: 0 26rpx 70rpx 0 rgba(121, 79, 79, 0.2);
 }
 
 .btn-2 {
-  bottom: 96rpx;
-  -webkit-animation: flyIn-2 .45s forwards;
-  animation: flyIn-2 .45s forwards;
-  animation-delay: .5s;
+  bottom: -100rpx;
+  left: calc(50% - 98rpx);
+  -webkit-animation: fly-up .35s forwards;
+  animation: fly-up .35s forwards;
+  animation-delay: .35s;
   background: rgba(57, 150, 55, 0.75);
   box-shadow: 0 26rpx 70rpx 0 rgba(35, 35, 35, 0.20);
 }
 
 .btn-3 {
-  bottom: 96rpx;
-  -webkit-animation: flyIn-3 .55s forwards;
-  animation: flyIn-3 .55s forwards;
-  animation-delay: .5s;
+  bottom: -100rpx;
+  left: calc(50% + 10rpx);
+  -webkit-animation: fly-up .35s forwards;
+  animation: fly-up .35s forwards;
+  animation-delay: .4s;
   background: rgba(151, 150, 150, 0.75);
   box-shadow: 0 26rpx 70rpx 0 rgba(35, 35, 35, 0.20);
 }
 
 .btn-4 {
-  bottom: 64rpx;
-  -webkit-animation: flyIn-4 .65s forwards;
-  animation: flyIn-4 .65s forwards;
-  animation-delay: .5s;
+  bottom: -100rpx;
+  left: calc(50% + 118rpx);
+  -webkit-animation: fly-up .35s forwards;
+  animation: fly-up .35s forwards;
+  animation-delay: .45s;
   background: rgba(185, 17, 16, 0.75);
   box-shadow: 0 26rpx 70rpx 0 rgba(35, 35, 35, 0.20);
 }
@@ -107,6 +110,16 @@
 .op-btn-icon {
   width: 36rpx;
   height: 36rpx;
+}
+
+@keyframes fly-up {
+  from {
+    bottom: -80rpx;
+  }
+
+  to {
+    bottom: 64rpx;
+  }
 }
 
 @keyframes flyIn-1 {
@@ -145,7 +158,7 @@
 
   to {
     opacity: 1;
-    left: calc((100% - 320rpx - 60rpx) / 2 + 160rpx + 40rpx);
+    left: calc(50% + 10rpx);
   }
 }
 
@@ -158,6 +171,6 @@
 
   to {
     opacity: 1;
-    left: calc((100% - 320rpx - 60rpx) / 2 + 240rpx + 60rpx);
+    left: calc(50% + 110rpx);
   }
 }
