--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,4 +1,134 @@
 /**index.wxss**/
+.container {
+  text-align: left;
+  padding-left: 32rpx;
+  padding-right: 32rpx;
+}
+
+.main-title {
+  width: 100%;
+  text-align: left;
+  margin-top: 62rpx;
+  margin-bottom: 54rpx;
+}
+
+.comming {
+  width: 100%;
+  height: 362rpx;
+}
+
+.no-today-inter {
+  background: image('') no-repeat;
+  background-size: 100%;
+}
+
+.today-inter-item {
+  font-family: PingFangSC-Regular, sans-serif;
+  font-size: 48rpx;
+  width: 100%;
+  color: #FFFFFF;
+  letter-spacing: 2.66rpx;
+  line-height: 48rpx;
+  font-weight: 400;
+}
+
+.main-top {
+  box-sizing: border-box;
+  padding: 32rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+  height: 220rpx;
+}
+
+.item-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.today-inter-item-top {
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.inner-left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.inter-time {
+  font-family: PingFangSC-Regular;
+  font-size: 48rpx;
+  color: #FFFFFF;
+  letter-spacing: 2.66rpx;
+  line-height: 48rpx;
+  font-weight: 400;
+  margin-right: 16rpx;
+}
+
+.inter-date {
+  font-family: PingFangSC-Regular;
+  font-size: 28rpx;
+  color: #FFFFFF;
+  letter-spacing: 1.56rpx;
+  line-height: 28rpx;
+  font-weight: 400;
+}
+
+.inner-right {
+  font-family: PingFangSC-Regular;
+  font-size: 36rpx;
+  color: #FFFFFF;
+  letter-spacing: 2rpx;
+  line-height: 36rpx;
+  font-weight: 400;
+}
+
+.today-inter-item-bottom {
+  font-family: PingFangSC-Regular;
+  font-size: 48rpx;
+  color: #FFFFFF;
+  letter-spacing: 2.66rpx;
+  line-height: 48rpx;
+  font-weight: 400;
+}
+
+.inter-addr-wrapper {
+  background: #FFFFFF;
+  box-shadow: 0 26rpx 70rpx -24rpx rgba(35, 35, 35, 0.15);
+  border-radius: 0 0 12rpx 12rpx;
+  height: 72rpx;
+  margin: 0 32rpx;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0rpx 24rpx;
+}
+
+.addr-icon {
+  width: 32rpx;
+  height: 32rpx;
+  flex-shrink: 0;
+  margin-right: 16rpx;
+}
+
+.addr-info {
+  font-family: PingFangSC-Regular;
+  font-size: 24rpx;
+  color: #313561;
+  letter-spacing: 1.32rpx;
+  font-weight: 400;
+}
+
 .add-btn {
   position: fixed;
   right: 36rpx;
