--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -14,7 +14,7 @@
 
 .comming {
   width: 100%;
-  height: 362rpx;
+  height: 382rpx;
 }
 
 .no-today-inter {
@@ -106,12 +106,11 @@
   background: #FFFFFF;
   box-shadow: 0 26rpx 70rpx -24rpx rgba(35, 35, 35, 0.15);
   border-radius: 0 0 12rpx 12rpx;
-  height: 72rpx;
   margin: 0 32rpx;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 0rpx 24rpx;
+  padding: 19rpx 24rpx;
 }
 
 .addr-icon {
@@ -125,6 +124,7 @@
   font-family: PingFangSC-Regular;
   font-size: 24rpx;
   color: #313561;
+  line-height: 36rpx;
   letter-spacing: 1.32rpx;
   font-weight: 400;
 }
